# thorq

./: .gitignore  Cargo.toml  LICENSE  Readme.md  go.mod  go.sum
cmd/thorq/: main.go
docs/: design.md  postgresql.md  setup.md
docs/sql/: jobs.sql  thorq.sql
internal/config/: config.go
internal/db/: postgres.go
internal/handler/: job_handler.go  queue_handler.go  user_handler.go
internal/models/: job.go  queue.go
internal/routes/: routes.go
internal/routes/job/: job.go
internal/routes/queue/: queue.go
internal/server/: server.go
internal/service/worker/: worker.go
scripts/: job_ingestor.py
src/: lib.rs  main.rs
src/controllers/: mod.rs
src/models/: mod.rs
src/services/: mod.rs
src/services/database/: mod.rs
src/services/db_writer/: mod.rs
src/services/worker/: mod.rs
v1/controllers/: queue_controller.rs
v1/services/: mod.rs
v1/services/database/: mod.rs
